@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: /usr/lib/rpm/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.102 2002/06/21 18:00:50 jbj Exp $
+# $Id: macros.in,v 1.103 2002/06/27 16:37:16 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -511,6 +511,10 @@
 #
 # XXX	Note: escaped %% for use in headerSprintf()
 %_build_name_fmt	%%{ARCH}/%%{NAME}-%%{VERSION}-%%{RELEASE}.%%{ARCH}.rpm
+
+#	The path to the dependency universe database. The default value
+#	is the rpmdb-redhat location.
+%_sdbpath	/usr/lib/rpmdb/%{_arch}-%{_vendor}-%{_os}/redhat
 
 #	The output binary package file name template used when suggesting
 #	binary packages that solve a dependency.
